--- a/streamlit.service.template
+++ b/streamlit.service.template
@@ -1,13 +1,15 @@
 [Unit]
-Description=Github-webhook flask app
+Description=Streamlit Application
 After=network.target
 
 [Service]
-User=laca
+User=laca  # The user that runs the Streamlit app
 Group=laca
-WorkingDirectory=%currentpath%
-ExecStart=%currentpath%/bin/gunicorn --workers 2 --bind 0.0.0.0:8000 --timeout 240 main:app
+WorkingDirectory=%currentpath%  # The directory where your Streamlit app is located
+ExecStart=%currentpath%/bin/python3 -m streamlit run Main.py --server.port 8501 --server.headless true
 Restart=always
+RestartSec=3
+Environment="PATH=%currentpath%/bin"
 
 [Install]
 WantedBy=multi-user.target
