--- a/streamlit.service.template
+++ b/streamlit.service.template
@@ -3,8 +3,8 @@ Description=Streamlit Application
 After=network.target
 
 [Service]
-User=$username
-Group=$groupname
+User=%username%
+Group=%groupname%
 WorkingDirectory=%currentpath%
 ExecStart=%currentpath%/bin/python3 -m streamlit run Main.py --server.port 8501 --server.headless true
 Restart=always
